Unify on Set.of